--- a/src/main/resources/assets/tournaments/ui_config.json
+++ b/src/main/resources/assets/tournaments/ui_config.json
@@ -11,17 +11,19 @@
       "leaderboard_1": 10,
       "leaderboard_2": 11,
       "leaderboard_3": 12,
-      "leaderboard_4": 14,
-      "leaderboard_5": 15,
-      "leaderboard_6": 16,
-      "leaderboard_7": 21,
-      "stats_book_slot": 13,
+      "leaderboard_4": 13,
+      "leaderboard_5": 14,
+      "leaderboard_6": 15,
+      "leaderboard_7": 16,
+      "stats_book_slot": 0,
       "recurring_label_slot": 27,
       "player_label_slot": 36,
-      "recurring_show_all_slot": 35,
-      "player_show_all_slot": 44,
-      "recurring_matches_start": 28,
-      "player_matches_start": 37
+      "recurring_show_all_slot": 34,
+      "player_show_all_slot": 43,
+      "recurring_matches_start": 29,
+      "player_matches_start": 38,
+      "recurring_in_progress_slots": [18, 27, 36],
+      "player_in_progress_slots": [26, 35, 44]
     },
     "items": {
       "join_button": {
@@ -77,6 +79,12 @@
         "name": "Show All Player Tournaments",
         "color": "gold",
         "action": "show_all_player"
+      },
+      "stats_book": {
+        "item": "minecraft:enchanted_book",
+        "name": "Tournament Stats",
+        "color": "gold",
+        "action": "none"
       }
     },
     "tournament_items": {
@@ -101,18 +109,13 @@
         "item": "minecraft:blue_stained_glass_pane",
         "name": " ",
         "slots": [
-          0,
           1,
           2,
           3,
           5,
-          6,
           7,
-          8,
           9,
           17,
-          18,
-          26,
           45,
           46,
           47,
@@ -125,15 +128,18 @@
         ]
       },
       "inner_border": {
-        "item": "minecraft:blue_stained_glass_pane",
+        "item": "minecraft:light_blue_stained_glass_pane",
         "name": " ",
         "slots": [
           19,
           20,
+          21,
           22,
           23,
           24,
-          25
+          25,
+          28,
+          37
         ]
       }
     }
@@ -253,10 +259,10 @@
         "action": "setMaxParticipants"
       },
       "recurring_field": {
-        "item": "minecraft:clock",
+        "item": "minecraft:diamond_block",
         "name": "Make Recurring Tournament",
         "color": "light_purple",
-        "action": "setRecurring"
+        "action": "openRecurringCreation"
       },
       "recurrence_interval_field": {
         "item": "minecraft:redstone_lamp",
