--- a/src/main/resources/assets/tournaments/ui_config.json
+++ b/src/main/resources/assets/tournaments/ui_config.json
@@ -3,6 +3,7 @@
     "title": "Tournament Hub",
     "title_item": "minecraft:nether_star",
     "slots": {
+      "title_slot": 4,
       "join_button_slot": 4,
       "leave_button_slot": 4,
       "create_button_slot": 8,
@@ -109,35 +110,14 @@
         "item": "minecraft:blue_stained_glass_pane",
         "name": " ",
         "slots": [
-          1,
-          2,
-          3,
-          5,
-          7,
-          9,
-          17,
-          45,
-          46,
-          47,
-          48,
-          49,
-          50,
-          51,
-          52,
-          53
+          1, 2, 3, 5, 7, 9, 17, 45, 46, 47, 48, 49, 50, 51, 52, 53
         ]
       },
       "inner_border": {
         "item": "minecraft:light_blue_stained_glass_pane",
         "name": " ",
         "slots": [
-          19,
-          20,
-          21,
-          22,
-          23,
-          24,
-          25,
+          19, 20, 21, 22, 23, 24, 25,
           28,
           37
         ]
@@ -179,37 +159,14 @@
         "item": "minecraft:blue_stained_glass_pane",
         "name": " ",
         "slots": [
-          0,
-          1,
-          2,
-          3,
-          5,
-          6,
-          7,
-          8,
-          9,
-          17,
-          45,
-          46,
-          47,
-          48,
-          49,
-          50,
-          51,
-          52,
-          53
+          0, 1, 2, 3, 5, 6, 7, 8, 9, 17, 45, 46, 47, 48, 49, 50, 51, 52, 53
         ]
       },
       "inner_border": {
         "item": "minecraft:blue_stained_glass_pane",
         "name": " ",
         "slots": [
-          10,
-          16,
-          27,
-          35,
-          36,
-          44
+          10, 16, 27, 35, 36, 44
         ]
       }
     }
@@ -282,30 +239,7 @@
         "item": "minecraft:blue_stained_glass_pane",
         "name": " ",
         "slots": [
-          0,
-          1,
-          2,
-          3,
-          5,
-          6,
-          7,
-          8,
-          9,
-          17,
-          18,
-          26,
-          27,
-          35,
-          36,
-          44,
-          45,
-          46,
-          47,
-          48,
-          50,
-          51,
-          52,
-          53
+          1, 2, 3, 5, 6, 7, 8, 9, 17, 18, 26, 27, 35, 36, 44, 45, 46, 47, 48, 50, 51, 52, 53
         ]
       }
     }
@@ -331,13 +265,7 @@
         "item": "minecraft:blue_stained_glass_pane",
         "name": " ",
         "slots": [
-          1,
-          2,
-          3,
-          5,
-          6,
-          7,
-          8
+          1, 2, 3, 5, 6, 7, 8
         ]
       }
     }
@@ -363,13 +291,7 @@
         "item": "minecraft:blue_stained_glass_pane",
         "name": " ",
         "slots": [
-          1,
-          2,
-          3,
-          5,
-          6,
-          7,
-          8
+          1, 2, 3, 5, 6, 7, 8
         ]
       }
     }
